<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_data_collect"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_data_collect"
            android:textSize="25dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/radio_collect_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_radio_group_gap"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_run"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/rdb_lbl_run" />

            <RadioButton
                android:id="@+id/radio_walk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rdb_lbl_walk" />

            <RadioButton
                android:id="@+id/radio_eat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rdb_lbl_eat" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/radio_data_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_train"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/rdb_lbl_train" />

            <RadioButton
                android:id="@+id/radio_test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rdb_lbl_test" />

        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/btn_collect_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_standard_top_margin"
        android:text="@string/btn_lbl_collect" />

    <Button
        android:id="@+id/btn_check_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_standard_top_margin"
        android:text="@string/btn_lbl_check_data" />

    <Button
        android:id="@+id/btn_train"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_standard_top_margin"
        android:text="@string/btn_lbl_train" />
    <Button
        android:id="@+id/btnPredict"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_standard_top_margin"
        android:text="@string/btn_lbl_predict" />

</LinearLayout>
