<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/mainHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_standard_top_margin"
        android:layout_marginTop="@dimen/activity_standard_top_margin"
        android:gravity="center"
        android:text="@string/lbl_dashboard_page"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/activity_heading_size" />

    <Button
        android:id="@+id/btn_create_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_standard_top_margin"
        android:text="@string/btn_lbl_create_data" />

    <TextView
        android:id="@+id/lblCreateData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_standard_top_margin"
        android:gravity="center"
        android:text="@string/lbl_create_data"
        android:textColor="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/btn_predict"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_standard_top_margin"
        android:text="@string/btn_lbl_valid_predict" />

    <TextView
        android:id="@+id/lblPredictData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_standard_top_margin"
        android:gravity="center"
        android:text="@string/lbl_predict_data"
        android:textColor="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/btn_graph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_standard_top_margin"
        android:text="@string/btn_lbl_plot_graph" />

    <TextView
        android:id="@+id/lblPlotGraph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_standard_top_margin"
        android:gravity="center"
        android:text="@string/lbl_plot_graph"
        android:textColor="@color/colorPrimaryDark" />

</LinearLayout>
