<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mcgroup16.asu.com.group16.activity.PredictActivity">


    <TextView
        android:id="@+id/lblHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_predict"
        android:textSize="25dp"
        android:textStyle="bold"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="45dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <Button
        android:id="@+id/btn_predict"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/btn_lbl_predict"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginTop="357dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblPredict"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_activity"
        android:textSize="16sp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="49dp"
        android:layout_marginTop="275dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="73dp" />

    <TextView
        android:id="@+id/txtPredict"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Default"
        android:layout_marginStart="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblPredict"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/lblPredict"
        android:layout_marginLeft="3dp" />

    <Button
        android:id="@+id/btn_collect"
        android:layout_width="292dp"
        android:layout_height="48dp"
        android:text="@string/btn_lbl_collect_predict"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/txtPredict"
        android:layout_marginTop="81dp"
        app:layout_constraintTop_toBottomOf="@+id/lblHeading"
        android:layout_marginBottom="80dp"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintHorizontal_bias="0.495" />

</android.support.constraint.ConstraintLayout>
